# user_journey

./: .claude  .env.example  .gitignore  README.md  build_user_profile.py  generate_report.py  index.html  kafka_consumer.py  llm_analyzer.py  model_comparison.json  pyproject.toml  report.html  robin_analyzer.py  robin_journey_report.html  robin_summary.json  robin_user_insights.json  sample_events.json
data/: claus.json  dan.json  kate.json  kcal.json  lauren.json  mike.json  pj.json  robin.json  trevor.json  users.json  wen.json
docs/: PHASE2_PROPOSAL.md  SYSTEM_DESIGN.md  USER_JOURNEY_PIPELINE.md
schemas/: user_insights_schema.json  user_insights_schema.py
scripts/: batch_generate.py  emoji_generator.py  event_analyzer.py  multi_user_consumer.py  report_data_builder.py
